tests/neg/i3745c.scala
import scala.collection.{ Seq as A, Seq as B } // error: Seq is renamed twice
